Add Cloudinary integration; create Cloudinary module and service, update navigation links, and register Handlebars helpers

--- a/views/no-videos.hbs
+++ b/views/no-videos.hbs
@@ -75,9 +75,11 @@
       <!-- Navigation menu -->
       <div class='nav-menu'>
         <a href='/' class='nav-link'>Home</a>
-        <a href='/post' class='nav-link'>Post</a>
+        <a href='/post' class='nav-link'>Generate Description</a>
+        <a href='/upload' class='nav-link'>Upload Videos</a>
+        <a href='/no-description' class='nav-link'>No Description</a>
       </div>
-      
+
       <h1>No Videos Available</h1>
       <p>{{message}}</p>
       <a href='/' class='btn btn-primary'>Go to Homepage</a>
