--- a/views/post.hbs
+++ b/views/post.hbs
@@ -82,7 +82,9 @@
       <!-- Navigation menu -->
       <div class='nav-menu'>
         <a href='/' class='nav-link'>Home</a>
-        <a href='/post' class='nav-link'>Post</a>
+        <a href='/post' class='nav-link'>Generate Description</a>
+        <a href='/upload' class='nav-link'>Upload Videos</a>
+        <a href='/no-description' class='nav-link'>No Description</a>
       </div>
       
       <h1>Generate Video Description</h1>
