--- a/views/video-list.hbs
+++ b/views/video-list.hbs
@@ -92,7 +92,9 @@
       <!-- Navigation menu -->
       <div class='nav-menu'>
         <a href='/' class='nav-link'>Home</a>
-        <a href='/post' class='nav-link'>Post</a>
+        <a href='/post' class='nav-link'>Generate Description</a>
+        <a href='/upload' class='nav-link'>Upload Videos</a>
+        <a href='/no-description' class='nav-link'>No Description</a>
       </div>
 
       <h1>Videos Pendientes de Subir</h1>
@@ -107,7 +109,13 @@
           <tbody>
             {{#each videos}}
               <tr class='clickable-row' data-video-id='{{_id}}'>
-                <td class='description'>{{truncate description 100}}</td>
+                <td class='description'>
+                  {{#if description}}
+                    {{truncate description 100}}
+                  {{else}}
+                    {{add @index 1}}
+                  {{/if}}
+                </td>
               </tr>
             {{/each}}
           </tbody>
@@ -122,9 +130,11 @@
     <script>
       // Add click event listener to all rows with the clickable-row class
       document.querySelectorAll('.clickable-row').forEach(row => {
-      row.addEventListener('click', function() { const videoId =
-      this.getAttribute('data-video-id'); window.location.href = '/video/' +
-      videoId; }); });
+        row.addEventListener('click', function() {
+          const videoId = this.getAttribute('data-video-id');
+          window.location.href = '/video/' + videoId;
+        });
+      });
     </script>
   </body>
 </html>
