Enhance video generation process: add URL handling, logging, and new views for video management

--- a/views/partials/navmenu.hbs
+++ b/views/partials/navmenu.hbs
@@ -7,6 +7,8 @@
     <a href='/text-to-speech' class='nav-link'>Text to Speech</a>
     <a href='/audio-management' class='nav-link'>Audio Management</a>
     <a href='/images/view/list' class='nav-link'>Image Management</a>
+    <a href='/generate-video' class='nav-link'>Generate Video</a>
+    <a href='/generate-video/all' class='nav-link'>Videos generados</a>
   </div>
 </nav>
 
